k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-dev
  labels:
    name: platform-dev
    environment: dev
