k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-platform-service
  namespace: platform-dev
  labels:
    app: aws-platform-app
spec:
  type: ClusterIP
  selector:
    app: aws-platform-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
